--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -3484,7 +3484,7 @@
                                               </div>
                                             </div>
                                             <div class="gxhsiab dir dir-ltr">
-                                              <div class="ciubx2o dir dir-ltr">
+                                              <div class="reviews-rate dir dir-ltr">
                                                 <div class="bs4u5d4 v6231dh dir dir-ltr"
                                                   style="--dls-baseColumn-width-base: 100%; --dls-baseColumn-width-sm: 100%; --dls-baseColumn-width-md: 50%; --dls-baseColumn-width-mdPlus: 50%; --dls-baseColumn-width-lg: 33.33333333333333%; --dls-baseColumn-width-xl: 33.33333333333333%; --dls-baseColumn-trailingOffset-base: 0; --dls-baseColumn-trailingOffset-sm: 0; --dls-baseColumn-trailingOffset-md: 0; --dls-baseColumn-trailingOffset-mdPlus: 0; --dls-baseColumn-trailingOffset-lg: 0; --dls-baseColumn-trailingOffset-xl: 0; --dls-baseColumn-leadingOffset-base: 0; --dls-baseColumn-leadingOffset-sm: 0; --dls-baseColumn-leadingOffset-md: 0; --dls-baseColumn-leadingOffset-mdPlus: 0; --dls-baseColumn-leadingOffset-lg: 0; --dls-baseColumn-leadingOffset-xl: 0;">
                                                   <div>
@@ -5367,7 +5367,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="ciubx2o dir dir-ltr">
+                                                <div class="reviews-rate dir dir-ltr">
                                                   <div class="bs4u5d4 v6231dh dir dir-ltr" style="
                                                         --dls-baseColumn-width-base: 100%;
                                                         --dls-baseColumn-width-sm: 100%;
@@ -13126,7 +13126,7 @@
                                               </div>
                                             </div>
                                             <div class="gxhsiab dir dir-ltr">
-                                              <div class="ciubx2o dir dir-ltr">
+                                              <div class="reviews-rate dir dir-ltr">
                                                 <div class="bs4u5d4 v6231dh dir dir-ltr"
                                                   style="--dls-baseColumn-width-base: 100%; --dls-baseColumn-width-sm: 100%; --dls-baseColumn-width-md: 50%; --dls-baseColumn-width-mdPlus: 50%; --dls-baseColumn-width-lg: 33.33333333333333%; --dls-baseColumn-width-xl: 33.33333333333333%; --dls-baseColumn-trailingOffset-base: 0; --dls-baseColumn-trailingOffset-sm: 0; --dls-baseColumn-trailingOffset-md: 0; --dls-baseColumn-trailingOffset-mdPlus: 0; --dls-baseColumn-trailingOffset-lg: 0; --dls-baseColumn-trailingOffset-xl: 0; --dls-baseColumn-leadingOffset-base: 0; --dls-baseColumn-leadingOffset-sm: 0; --dls-baseColumn-leadingOffset-md: 0; --dls-baseColumn-leadingOffset-mdPlus: 0; --dls-baseColumn-leadingOffset-lg: 0; --dls-baseColumn-leadingOffset-xl: 0;">
                                                   <div>
@@ -13402,105 +13402,105 @@
                                             </div>
                                             <div class="tab__content-visibility">
                                               <div class="r1f90fvr dir dir-ltr">
-                                                <div class="ciubx2o dir dir-ltr">
+                                                <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Cleanliness
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.8 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.8 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 96%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.8</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.8</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Accuracy
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Communication
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Location
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.5 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.5 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 90%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.5</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.5</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Check-in
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Value
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.8 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.8 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 96%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.8</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.8</span>
                                                         </div>
                                                       </div>
                                                     </div>
@@ -13510,7 +13510,7 @@
                                             </div>
                                             <div class="tab__content-visibility">
                                               <div class="dir dir-ltr">
-                                                <div class="ciubx2o dir dir-ltr" role="list">
+                                                <div class="reviews-rate dir dir-ltr" role="list">
                                                   <div role="listitem" class="_162hp8xh">
                                                     <div class="r1rl3yjt dir dir-ltr">
                                                       <div>
@@ -15282,7 +15282,7 @@
                                                 </section>
                                               </div>
                                             </div>
-                                            <div class="ciubx2o dir dir-ltr">
+                                            <div class="reviews-rate dir dir-ltr">
                                               <div class="bs4u5d4 v6231dh dir dir-ltr" style="
                                                     --dls-baseColumn-width-base: 100%;
                                                     --dls-baseColumn-width-sm: 100%;
