--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -6383,7 +6383,7 @@
                                                     </div>
                                                   </div>
                                                   <div
-                                                    class="ciubx2o dir dir-ltr"
+                                                    class="reviews-rate dir dir-ltr"
                                                   >
                                                     <div
                                                       class="bs4u5d4 v6231dh dir dir-ltr"
@@ -13357,23 +13357,23 @@
                                         <div class="modal__items">
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">
                                                   Cleanliness
                                                 </div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.8 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 96%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.8</span
                                                   >
@@ -13383,23 +13383,23 @@
                                           </div>
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">
                                                   Accuracy
                                                 </div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.9 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 98%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.9</span
                                                   >
@@ -13409,23 +13409,23 @@
                                           </div>
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">
                                                   Communication
                                                 </div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.9 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 98%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.9</span
                                                   >
@@ -13435,23 +13435,23 @@
                                           </div>
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">
                                                   Location
                                                 </div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.5 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 90%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.5</span
                                                   >
@@ -13461,23 +13461,23 @@
                                           </div>
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">
                                                   Check-in
                                                 </div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.9 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 98%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.9</span
                                                   >
@@ -13487,21 +13487,21 @@
                                           </div>
                                           <div class="_yorrb7h">
                                             <div class="_t6qflv">
-                                              <div class="_a3qxec">
-                                                <div class="_y1ba89">Value</div>
+                                              <div class="reviews-rate__body">
+                                                <div class="reviews-rate__title">Value</div>
                                                 <div class="_tk5b0r">
                                                   <div
-                                                    class="_7pay"
+                                                    class="reviews-rate__bar-wrapper"
                                                     aria-label="4.8 out of 5.0"
                                                     role="img"
                                                   >
                                                     <span
-                                                      class="_1wsvxly"
+                                                      class="reviews-rate__bar"
                                                       style="width: 96%"
                                                     ></span>
                                                   </div>
                                                   <span
-                                                    class="_4oybiu"
+                                                    class="reviews-rate__count"
                                                     aria-hidden="true"
                                                     >4.8</span
                                                   >
