--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -4069,31 +4069,31 @@
                                                   class="r1f90fvr dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="ciubx2o dir dir-ltr"
+                                                    class="reviews-rate dir dir-ltr"
                                                   >
                                                     <div class="reviews-rate__wrapper">
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Cleanliness
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.8 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 96%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.8</span
                                                             >
@@ -4105,25 +4105,25 @@
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Accuracy
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -4135,25 +4135,25 @@
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Communication
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -4165,25 +4165,25 @@
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Location
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.5 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 90%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.5</span
                                                             >
@@ -4195,25 +4195,25 @@
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Check-in
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -4225,25 +4225,25 @@
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Value
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.8 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 96%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.8</span
                                                             >
