--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -7331,31 +7331,31 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                   class="r1f90fvr dir dir-ltr"
                                                 >
                                                   <div
-                                                    class="ciubx2o dir dir-ltr"
+                                                    class="reviews-rate dir dir-ltr"
                                                   >
                                                     <div class="reviews-rate__wrapper">
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Cleanliness
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.8 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 96%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.8</span
                                                             >
@@ -7367,25 +7367,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Accuracy
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -7397,25 +7397,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Communication
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -7427,25 +7427,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Location
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.5 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 90%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.5</span
                                                             >
@@ -7457,25 +7457,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Check-in
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.9 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 98%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.9</span
                                                             >
@@ -7487,25 +7487,25 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div
                                                         class="rjiv01r dir dir-ltr"
                                                       >
-                                                        <div class="_a3qxec">
-                                                          <div class="_y1ba89">
+                                                        <div class="reviews-rate__body">
+                                                          <div class="reviews-rate__title">
                                                             Value
                                                           </div>
-                                                          <div class="_bgq2leu">
+                                                          <div class="reviews-rate__rate">
                                                             <div
-                                                              class="_7pay"
+                                                              class="reviews-rate__bar-wrapper"
                                                               aria-label="4.8 out of 5.0"
                                                               role="img"
                                                             >
                                                               <span
-                                                                class="_1wsvxly"
+                                                                class="reviews-rate__bar"
                                                                 style="
                                                                   width: 96%;
                                                                 "
                                                               ></span>
                                                             </div>
                                                             <span
-                                                              class="_4oybiu"
+                                                              class="reviews-rate__count"
                                                               aria-hidden="true"
                                                               >4.8</span
                                                             >
@@ -7521,7 +7521,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               >
                                                 <div class="dir dir-ltr">
                                                   <div
-                                                    class="ciubx2o dir dir-ltr"
+                                                    class="reviews-rate dir dir-ltr"
                                                     role="list"
                                                   >
                                                     <div
