--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -4291,7 +4291,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="ciubx2o dir dir-ltr">
+                                                <div class="reviews-rate dir dir-ltr">
                                                   <div class="bs4u5d4 v6231dh dir dir-ltr" style="
                                                         --dls-baseColumn-width-base: 100%;
                                                         --dls-baseColumn-width-sm: 100%;
@@ -12194,105 +12194,105 @@
                                             </div>
                                             <div class="tab__content-visibility">
                                               <div class="r1f90fvr dir dir-ltr">
-                                                <div class="ciubx2o dir dir-ltr">
+                                                <div class="reviews-rate dir dir-ltr">
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Cleanliness
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.8 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.8 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 96%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.8</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.8</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Accuracy
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Communication
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Location
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.5 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.5 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 90%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.5</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.5</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Check-in
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.9 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.9 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 98%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.9</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.9</span>
                                                         </div>
                                                       </div>
                                                     </div>
                                                   </div>
                                                   <div class="reviews-rate__wrapper">
                                                     <div class="rjiv01r dir dir-ltr">
-                                                      <div class="_a3qxec">
-                                                        <div class="_y1ba89">
+                                                      <div class="reviews-rate__body">
+                                                        <div class="reviews-rate__title">
                                                           Value
                                                         </div>
-                                                        <div class="_bgq2leu">
-                                                          <div class="_7pay" aria-label="4.8 out of 5.0" role="img">
-                                                            <span class="_1wsvxly" style="
+                                                        <div class="reviews-rate__rate">
+                                                          <div class="reviews-rate__bar-wrapper" aria-label="4.8 out of 5.0" role="img">
+                                                            <span class="reviews-rate__bar" style="
                                                                   width: 96%;
                                                                 "></span>
                                                           </div>
-                                                          <span class="_4oybiu" aria-hidden="true">4.8</span>
+                                                          <span class="reviews-rate__count" aria-hidden="true">4.8</span>
                                                         </div>
                                                       </div>
                                                     </div>
@@ -12302,7 +12302,7 @@
                                             </div>
                                             <div class="tab__content-visibility">
                                               <div class="dir dir-ltr">
-                                                <div class="ciubx2o dir dir-ltr" role="list">
+                                                <div class="reviews-rate dir dir-ltr" role="list">
                                                   <div role="listitem" class="_162hp8xh">
                                                     <div class="r1rl3yjt dir dir-ltr">
                                                       <div>
@@ -13207,7 +13207,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="ciubx2o dir dir-ltr">
+                                              <div class="reviews-rate dir dir-ltr">
                                                 <div class="bs4u5d4 v6231dh dir dir-ltr" style="
                                                       --dls-baseColumn-width-base: 100%;
                                                       --dls-baseColumn-width-sm: 100%;
@@ -13419,7 +13419,7 @@
                                                 </section>
                                               </div>
                                             </div>
-                                            <div class="ciubx2o dir dir-ltr">
+                                            <div class="reviews-rate dir dir-ltr">
                                               <div class="bs4u5d4 v6231dh dir dir-ltr" style="
                                                     --dls-baseColumn-width-base: 100%;
                                                     --dls-baseColumn-width-sm: 100%;
